<resources>
    <string name="app_name">Dining Garage app</string>
    <string name="app">Dining Garage</string>
    <string name="logo">Logo</string>
    <string name="phone">0712345678</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="enter_code">Enter the Confirmation Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="srilankan">Sri Lankan</string>
    <string name="indian">Indian</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="view_btn">View</string>

    <string name="recipe1">Rice and Curry - Egg</string>
    <string name="price1">Rs.180.00</string>
    <string name="recipe2">Rice and Curry - Chicken</string>
    <string name="price2">Rs.250.00</string>
    <string name="recipe3">Rice and Curry - Fish</string>
    <string name="price3">Rs.200.00</string>
    <string name="recipe4">Cheese Kottu</string>
    <string name="price4">Rs.300.00</string>

    <string name="home_btn">Home</string>
    <string name="bag_btn">Bag</string>
    <string name="favorite_btn">Favorites</string>
    <string name="profile_btn">Profile</string>
    <string name="order_btn">Order</string>
    <string name="addFav_btn">Add to Favorites</string>
    <string name="add_btn">Add</string>
    <string name="dlt_btn">Delete</string>

    <string name="para_1">\n\n\n Basmathi Rice\n
                            Devilled Potato\n Dhal Curry\n
                            Chicken Curry\nVegetable Salad</string>
    <string name="addMenuBtn">Add Item</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="insertItemName">Item Name</string>
    <string name="insertDescription">Description</string>
    <string name="uploadImg">Upload Image</string>
    <string name="insertPrice">Price</string>
    <string name="addNewItem">Add New Item</string>
    <string name="save_btn">Save</string>
    <string name="insertItemCode">Item Code</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="mobile">Mobile number</string>
    <string name="myProfile">My Profile</string>
    <string name="update_btn">Update Profile</string>
    <string name="deleteProf_btn">Delete Profile</string>
    <string name="show_btn">Show</string>
    <string name="show_btn_">View Profile</string>
    <string name="insertType">Item Type</string>
    <string name="textView">Register to Dining Garage</string>
    <string name="recipe_in1">Chicken Biriyani</string>
    <string name="recipe_in2">Masala Dosa</string>
    <string name="recipe_ch1">Egg Fried Rice</string>
    <string name="recipe_ch2">Chinese soy souce noodles</string>
    <string name="recipe_it1">Creamy White Sauce Pasta</string>
    <string name="recipe_it2"><![CDATA[Chicken & Cheese Lasagna]]></string>
    <string name="nameoncard">Name on Card</string>
    <string name="Card_no">Card Number</string>
    <string name="expir_date">Expire Date</string>
    <string name="Sec">CVV</string>
    <string name="date">date</string>
    <string name="sec">cvv</string>
    <string name="Contact_no">Contact Number</string>
    <string name="Sub_btn">Submit</string>
    <string name="card_det">Card Details</string>
    <string name="Details">Details</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Location">Location</string>
    <string name="Delete">DELETE</string>
    <string name="Update">UPDATE</string>
    <string name="Payement_btn">Pay</string>
    <string name="Next">Next</string>
    <string name="Dil_ive">Enter Details</string>
    <string name="Contactus">Contact Us</string>
    <string name="feedback">FeedBack</string>
    <string name="Cash_btn">CASH</string>
    <string name="Card_btn">CARD</string>
    <string name="Payment">Payment</string>
    <string name="visa_btn">Visa</string>
    <string name="master_btn">Master</string>
    <string name="Date">Date</string>
    <string name="Amount">Amount</string>
    <string name="enter">Enter</string>
    <string name="Quantity">Quantity</string>
    <string name="unitprice">Unit Price</string>
    <string name="todo">TODO</string>

</resources>